Fixed small visual bug where panels that were hidden due to being empty still consumed 1px of vertical space. Empty panels can now shrink to 0 height, freeing up the space for visible panels.

--- a/website/js/css/custom.css
+++ b/website/js/css/custom.css
@@ -950,6 +950,11 @@ div.variant-detail-group .variantfield-empty {
     display: none;
 }
 
+/* overrides bootstrap's min-height so empty groups can be completely hidden */
+div.variant-detail-group {
+    min-height: 0;
+}
+
 div.variant-detail-group .group-empty {
     display: none;
 }
